tests/ui/wf/wf-trait-default-fn-where-clause.stderr
error[E0277]: the trait bound `Self: Eq` is not satisfied
  --> $DIR/wf-trait-default-fn-where-clause.rs:11:31
   |
LL |     fn bar<A>(&self) where A: Bar<Self> {
   |                               ^^^^^^^^^ the trait `Eq` is not implemented for `Self`
   |
note: required by a bound in `Bar`
  --> $DIR/wf-trait-default-fn-where-clause.rs:8:13
   |
LL | trait Bar<T:Eq+?Sized> { }
   |             ^^ required by this bound in `Bar`
help: consider further restricting `Self`
   |
LL |     fn bar<A>(&self) where A: Bar<Self>, Self: Eq {
   |                                        ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
